force-app/main/default/objects/department__c/department__c.object-meta.xml
<CustomObject>
    <label>department</label>
    <nameField>
        <label>department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>department</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>