force-app/main/default/objects/department__c/fields/location1__c.field-meta.xml
<CustomField>
    <fullName>location1__c</fullName>
    <label>location1</label>
    <referenceTo>location1__c</referenceTo>
    <relationshipLabel>department</relationshipLabel>
    <relationshipName>department</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>