force-app/main/default/objects/department__c/fields/maximum_security_deposit__c.field-meta.xml
<CustomField>
    <fullName>maximum_security_deposit__c</fullName>
    <label>maximum security deposit</label>
    <summarizedField>employe1__c.security_deposit__c</summarizedField>
    <summaryForeignKey>employe1__c.department__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>