force-app/main/default/objects/department__c/fields/minimum_security_deposit__c.field-meta.xml
<CustomField>
    <fullName>minimum_security_deposit__c</fullName>
    <label>minimum security deposit</label>
    <summarizedField>employe1__c.security_deposit__c</summarizedField>
    <summaryForeignKey>employe1__c.department__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>