force-app/main/default/objects/department__c/fields/no_of_employes__c.field-meta.xml
<CustomField>
    <fullName>no_of_employes__c</fullName>
    <label>no. of employes</label>
    <summaryForeignKey>employe1__c.department__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>