force-app/main/default/objects/department__c/fields/sum_of_security_deposits__c.field-meta.xml
<CustomField>
    <fullName>sum_of_security_deposits__c</fullName>
    <label>sum of security deposits</label>
    <summarizedField>employe1__c.security_deposit__c</summarizedField>
    <summaryForeignKey>employe1__c.department__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>